--- a/sample_container/index.html
+++ b/sample_container/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>SMART Container Example</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel='stylesheet' href='styles.css' type='text/css' />
     <script src="polyfill.js"></script>
     <script src="jquery.min.js"></script>
