Added bp centiles with IE-edge metatag

--- a/sample_container/index.html
+++ b/sample_container/index.html
@@ -130,8 +130,8 @@
         "id" : "bp-centiles@apps.smartplatforms.org",
         "mode" : "ui",
         "scope" : "record",
-        "index" : "http://sample-apps-v06.smartplatforms.org/framework/bp_centiles/index.html",
-        "icon" :  "http://sample-apps-v06.smartplatforms.org/framework/bp_centiles/icon.png"
+        "index" : "http://joshuamandel.com/smart-json-proxy/sample_container/bp_centiles/index.html",
+        "icon" :  "http://joshuamandel.com/smart-json-proxy/sample_container/bp_centiles/icon.png"
       };
 
       var growth_chart_manifest = {
