Update bp centiles with IE-edge metatag

--- a/sample_container/bp_centiles/index.html
+++ b/sample_container/bp_centiles/index.html
@@ -16,7 +16,7 @@
 
     <head>
         <title>Blood Pressure Centiles SMART Application</title>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <!-- jQuert UI custom theme-->
         <link rel="stylesheet" href="css/themes/custom/jquery-ui.css" type="text/css" media="screen" />
